adding refresh rate

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,3 +10,4 @@ spring:
         git:
           uri: https://github.com/shvkpaul/spring-app-config.git
           clone-on-start: true
+          refresh-rate: 1
