--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,3 +11,10 @@ spring:
           uri: https://github.com/shvkpaul/spring-app-config.git
           clone-on-start: true
           refresh-rate: 1
+
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
