--- a/src/main/resources/docker-compose.yml
+++ b/src/main/resources/docker-compose.yml
@@ -20,6 +20,17 @@ services:
     ports:
       - '9411:9411'
 
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis-data:/data
+    restart: always
+
 volumes:
   db:
+    driver: local
+  redis-data:
     driver: local
